src/components/Form/index.module.css
section.formSection{
  width: 100%;
  background-color: #009373;
  padding: 20px 0px;
  margin: 20px 0px 0px 0px;
}

section.formSection h2{
  text-align: center;
  color: #ffffff;
  font-size: 2rem;
}

form.form{
  display: flex;
  flex-direction: column;

  max-width: 1350px;
  width: 100%;
  
  margin: auto;
  padding: 40px;
  
  border-radius: 10px;
  background-color: #ffffff;
}

div.textareaContainer{
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin-bottom: 10px;
}

div.textareaContainer textarea {
  background-color: #e4e4e7;
  outline: none;
  border: none;
  border-radius: 10px;
  padding: 10px 20px;
  height: 200px;
  resize: none;
}

@media (max-width: 1350px) {
  section.formSection{
    padding: 20px 40px;
  }
}

@media (max-width: 450px) {
  section.formSection{
    padding: 15px 10px;
  }
}

